--- a/contacts/css/contacts.css
+++ b/contacts/css/contacts.css
@@ -31,8 +31,7 @@ html{
 body{
 	height: 100%;
 	background-color: #fff;
-	font-family: 'Open Sans';
-	font-style: normal;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
 	font-size: 1em;
 }
@@ -110,23 +109,9 @@ a, a:hover{
 	background-color: #eee;
 }
 
-.logo{
-	float: left;
-	margin: 0 0.3125em;
-}
-
-.logo img{
-	width: 1em;
-	padding-top: 8px;
-}
-
 .nav li{
-	margin-right: 2em;
+	margin-left: 10px;
 	padding-top: 5px;
-}
-
-.nav li:first-child{
-	margin-right: 0;
 }
 
 .nav a{
